Add printToPdfPoppler test
Task-number: QTBUG-69550
Change-Id: I38fb8a32ad1967fc8a8568ad6c02ca3ca3000354
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -133,6 +133,12 @@
                 { "type": "pkgConfig", "args": "protobuf" }
             ]
         },
+        "webengine-poppler-cpp": {
+            "label": "poppler-cpp",
+            "sources": [
+                { "type": "pkgConfig", "args": "poppler-cpp" }
+            ]
+        },
         "pulseaudio": {
             "label": "pulseaudio >= 0.9.10",
             "sources": [
@@ -618,6 +624,12 @@
             "label": "Sanitizer",
             "autoDetect": "config.sanitizer && tests.webengine-sanitizer",
             "condition": "config.sanitizer",
+            "output": [ "privateFeature" ]
+        },
+        "webengine-poppler-cpp": {
+            "label": "poppler-cpp",
+            "autoDetect": "config.unix",
+            "condition": "libs.webengine-poppler-cpp",
             "output": [ "privateFeature" ]
         }
     },
