Print macOS toolchain info when configuring WebEngine
It's not always easy to determine what Xcode / clang version is used
when building WebEngine in the CI. Same for the OS version and other
toolchain details.

Print out the values at QtWebEngine configure time.
This will also help us when users provide build logs.

Change-Id: I413a6c5b6efb42c4411268ca46d07c2fb9b85cc3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Kai Koehne <kai.koehne@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -680,6 +680,36 @@
                     "condition": "config.sanitizer"
                 },
                 {
+                    "message": "macOS version",
+                    "type": "macosToolchainVersion",
+                    "args": "macosVersion",
+                    "condition": "config.macos"
+                },
+                {
+                    "message": "Xcode version",
+                    "type": "macosToolchainVersion",
+                    "args": "xcodeVersion",
+                    "condition": "config.macos"
+                },
+                {
+                    "message": "Clang version",
+                    "type": "macosToolchainVersion",
+                    "args": "clangVersion",
+                    "condition": "config.macos"
+                },
+                {
+                    "message": "macOS SDK version",
+                    "type": "macosToolchainVersion",
+                    "args": "sdkVersion",
+                    "condition": "config.macos"
+                },
+                {
+                    "message": "macOS minimum deployment target",
+                    "type": "macosToolchainVersion",
+                    "args": "deploymentTarget",
+                    "condition": "config.macos"
+                },
+                {
                    "section": "Optional system libraries used",
                    "condition": "config.unix",
                    "entries": [
