Linux: Check for libnss version
src/3rdparty/chromium/crypto/nss_util.cc has a static assert for
NSS_VMAJOR, NSS_VMINOR:

  static_assert(
      (NSS_VMAJOR == 3 && NSS_VMINOR == 14 && NSS_VPATCH >= 3) ||
      (NSS_VMAJOR == 3 && NSS_VMINOR > 14) ||
      (NSS_VMAJOR > 3),
      "nss version check failed");

Task-number: QTBUG-69428
Change-Id: Ia006882fb2c8b4a42ec62ceb6de74f9f947fa1b6
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -166,7 +166,7 @@
         "webengine-nss": {
             "label": "nss",
             "sources": [
-                { "type": "pkgConfig", "args": "nss" }
+                { "type": "pkgConfig", "args": "nss >= 3.14.3" }
             ]
         },
         "webengine-png": {
