Add missing verbose label for nss check
Change-Id: I1003cc075d87b7e44088512d6f548a917bea1b45
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -164,7 +164,7 @@
             ]
         },
         "webengine-nss": {
-            "label": "nss",
+            "label": "nss >= 3.26",
             "sources": [
                 { "type": "pkgConfig", "args": "nss >= 3.26" }
             ]
