Add QtPdf and QtPdfWidgets modules
This change adds two new modules to qtwebengine repository.

New modules do not depend on webengine module, however webengine
chromium source code and Chromium "gn" configuration is
required to build QtPdf.

Adding two unrelated modules to webengine might look crazy:
however sharing gn build configuration and Chromium code base
with necessary qt adaptations simplifies code maintenance and
minimises required code checkouts. Back porting of security
patches for Chromium also affects Pdfium. Moreover, Pdfium is no
longer a separate project, but integrated into Chromium:
therefore moving it out of Chromium source tree would require
extra effort.

Rename webengine-core feature to build-qtwebengine-core, this
makes consistent feature naming with build-qtpdf

At the moment two new modules have integrated build, with possible
shortcuts:

    qmake -- --no-build-qtwebengine-core
    qmake -- --no-build-qtpdf

Webengine build is disabled by default now.

Change-Id: Iac3d9927d51f3ac316db0148d275eda843dcc19b
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -8,6 +8,7 @@
     "commandline": {
         "options": {
             "build-qtwebengine-core": "boolean",
+            "build-qtpdf": "boolean",
             "webengine-jumbo-build": { "type": "optionalString", "name": "merge_limit"}
         }
     },
@@ -391,11 +392,28 @@
         "build-qtwebengine-core": {
             "label": "Build Qt WebEngine Core",
             "purpose": "Provides WebEngine Core support.",
+            "autoDetect": "false",
             "output": [ "privateFeature" ]
         },
         "build-qtpdf": {
              "label": "Support Qt PDF rendering module",
              "purpose": "Enables building the Qt PDF rendering module.",
+             "output": [ "privateFeature" ]
+        },
+        "webengine-developer-build": {
+            "label": "Developer build",
+            "purpose": "Enables the developer build configuration.",
+            "autoDetect": "features.private_tests",
+            "output": [ "privateFeature" ]
+        },
+        "build-qtpdf": {
+             "label": "Support Qt PDF rendering module",
+             "purpose": "Enables building the Qt PDF rendering module.",
+             "condition": "module.gui
+                            && features.webengine-python2
+                            && features.webengine-gperf
+                            && features.webengine-bison
+                            && features.webengine-flex",
              "output": [ "privateFeature" ]
         },
         "webengine-developer-build": {
@@ -710,7 +728,7 @@
             "entries": [
                 "webengine-system-ninja",
                 "webengine-system-gn",
-                 {
+                {
                     "message": "Jumbo Build Merge Limit",
                     "type": "jumboBuild"
                 },
