--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -16,6 +16,9 @@ deps = [
   "//components/cdm/renderer",
   "//components/error_page/common",
   "//components/keyed_service/content",
+  "//components/network_hints/browser",
+  "//components/network_hints/common",
+  "//components/network_hints/renderer",
   "//components/visitedlink/browser",
   "//components/visitedlink/renderer",
   "//components/web_cache/browser",
