General adaptations for Chromium 69
Change-Id: Ifeaf0ee13213dc5a24d2f2b4655cf7f405cddef7
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -37,7 +37,8 @@ source_set("qtwebengine_sources") {
   include_dirs = [
     "//skia/config",
     "//third_party/boringssl/src/include",
-    "//third_party/skia/include/core"
+    "//third_party/skia/include/core",
+    "//third_party/skia/include/gpu"
   ]
   deps = [
     "//chrome/common:buildflags",
