--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -1,3 +1,4 @@
+import("//build/config/ui.gni")
 import("//media/media_options.gni")
 import("//third_party/widevine/cdm/widevine.gni")
 
@@ -29,7 +30,6 @@ deps = [
   "//content/public/common",
   "//content/public/renderer",
   "//media:media_buildflags",
-  "//net:net_browser_services",
   "//net:net_with_v8",
   "//skia",
   "//third_party/blink/public:blink",
@@ -46,6 +46,12 @@ if (enable_webrtc) {
 
 if (is_linux && !is_desktop_linux) {
   deps += [ "//ui/events/ozone:events_ozone_evdev"]
+}
+
+if (use_ozone) {
+  deps += [
+    "//ui/ozone/common"
+  ]
 }
 
 data_deps = [ "//qtwebengine/browser:service_manifests" ]
