--- a/configure.json
+++ b/configure.json
@@ -303,6 +303,10 @@
         "webengine-sanitizer": {
             "label" : "sanitizer support",
             "type": "isSanitizerSupported"
+        },
+        "webengine-win-compiler64": {
+            "label": "64bit compiler",
+            "type": "isWindowsHostCompiler64"
         }
     },
 
@@ -609,6 +613,12 @@
             "autoDetect": "config.sanitizer && tests.webengine-sanitizer",
             "condition": "config.sanitizer",
             "output": [ "privateFeature" ]
+        },
+        "webengine-win-compiler64": {
+            "label": "64bit compiler",
+            "condition": "config.win32 && tests.webengine-win-compiler64",
+            "type": "isWindowsHostCompiler64",
+            "output": [ "privateFeature" ]
         }
     },
 
@@ -642,6 +652,11 @@
             "type": "warning",
             "condition": "config.unix && !features.webengine-host-pkg-config",
             "message": "host pkg-config not found"
+        },
+        {
+            "type": "warning",
+            "condition": "config.win32 && !features.webengine-win-compiler64",
+            "message": "64-bit cross-building or native toolchain is required to build QtWebEngine."
         }
     ],
 
