--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -7,6 +7,9 @@ import("//printing/buildflags/buildflags.gni")
 
 source_set("qtwebengine_spellcheck_sources") {
   include_dirs = core_include_dirs
+  configs += [
+    "//third_party/boringssl:external_config",
+  ]
   sources = [
     "//chrome/browser/spellchecker/spell_check_host_chrome_impl.cc",
     "//chrome/browser/spellchecker/spell_check_host_chrome_impl.h",
@@ -22,7 +25,6 @@ source_set("qtwebengine_spellcheck_sources") {
   deps = [
     "//components/spellcheck/browser",
     "//components/spellcheck/renderer",
-    "//third_party/boringssl",
     "//third_party/blink/public:blink",
     "//third_party/hunspell",
   ]
@@ -34,11 +36,9 @@ source_set("qtwebengine_spellcheck_sources") {
 }
 
 source_set("qtwebengine_sources") {
-  include_dirs = [
-    "//skia/config",
-    "//third_party/boringssl/src/include",
-    "//third_party/skia/include/core",
-    "//third_party/skia/include/gpu"
+  configs += [
+    "//skia:skia_config",
+    "//third_party/boringssl:external_config",
   ]
   deps = [
     "//chrome/common:buildflags",
