--- a/configure.json
+++ b/configure.json
@@ -205,8 +205,21 @@
         },
         "webengine-freetype": {
             "label": "freetype >= 2.4.2",
+            "test": {
+                "head": [
+                    "#include <ft2build.h>",
+                    "#include FT_FREETYPE_H",
+                    "#if ((FREETYPE_MAJOR*10000 + FREETYPE_MINOR*100 + FREETYPE_PATCH) < 20402)",
+                    "#  error This version of freetype is too old.",
+                    "#endif"
+                ],
+                "main": [
+                   "FT_Face ft_face = 0;",
+                   "FT_Reference_Face(ft_face);"
+                ]
+            },
             "sources": [
-                { "type": "pkgConfig", "args": "freetype2 >= 2.4.2" }
+                { "type": "pkgConfig", "args": "freetype2" }
             ]
         }
     },
