--- a/src/core/qtwebengine_resources.gni
+++ b/src/core/qtwebengine_resources.gni
@@ -21,6 +21,7 @@ repack("qtwebengine_repack_resources") {
     "$root_gen_dir/chrome/task_scheduler_internals_resources.pak",
     "$root_gen_dir/components/components_resources.pak",
     "$root_gen_dir/content/content_resources.pak",
+    "$root_gen_dir/mojo/public/js/mojo_bindings_resources.pak",
     "$root_gen_dir/net/net_resources.pak",
     "$root_gen_dir/third_party/blink/public/resources/blink_resources.pak",
     "$root_gen_dir/ui/resources/webui_resources.pak",
@@ -32,6 +33,7 @@ repack("qtwebengine_repack_resources") {
      "//chrome/browser/resources:task_scheduler_internals_resources",
      "//components/resources:components_resources_grit",
      "//content:resources_grit",
+     "//mojo/public/js:resources",
      "//net:net_resources_grit",
      "//third_party/blink/public:resources_grit",
      "//ui/resources:webui_resources_grd_grit",
