Add proxy resolver service
This adds proxy resolver service as a part of content utility process
and pulls in the corresponding change in Chromium.

Fixes: QTBUG-69281
Change-Id: Icb2b67e1e506a5b511531322a8c13d7df0e11f9f
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -31,6 +31,7 @@ deps = [
   "//third_party/WebKit/public:blink",
   "//ui/accessibility",
   "//third_party/mesa:mesa_headers",
+  "//services/proxy_resolver:lib",
   ":qtwebengine_sources",
   ":qtwebengine_resources"
 ]
