Fix build for Boot2Qt
A change in Chromium 69 pulled a mojom header into
the public content browser API without, assuming the
dependencies would always be fulfilled via building
the extension system.

Add the dependency explicitly to fix this.

Change-Id: I005aa0970c7ecdbdce90d8c1db78c38f2274d324
Fixes: QTBUG-70914
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -44,6 +44,7 @@ source_set("qtwebengine_sources") {
     "//chrome/common:buildflags",
     "//components/nacl/common:buildflags",
     "//extensions/buildflags:buildflags",
+    "//third_party/blink/public/mojom:mojom_platform",
   ]
   sources = [
     "//chrome/common/custom_handlers/protocol_handler.cc",
