Adaptations for Chromium 70
Change-Id: I8bb77784dbc8a0b9debd96a4c49421bd34e6a0df
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>

--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -27,15 +27,12 @@ deps = [
   "//components/web_cache/renderer",
   "//components/spellcheck:buildflags",
   "//content/public/app:browser",
-  "//content/public/browser",
-  "//content/public/common",
-  "//content/public/renderer",
+  "//content",
   "//media:media_buildflags",
   "//net:net_with_v8",
   "//services/proxy_resolver:lib",
   "//skia",
   "//third_party/blink/public:blink",
-  "//third_party/mesa:mesa_headers",
   "//ui/accessibility",
   "//qtwebengine/browser:interfaces",
   ":qtwebengine_sources",
