Adaptations for Chromium 71
Change-Id: Ib650113b05dfd4771240804f94e33c07aa317bf2
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>

--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -34,6 +34,7 @@ deps = [
   "//skia",
   "//third_party/blink/public:blink",
   "//ui/accessibility",
+  "//ui/gl",
   "//qtwebengine/browser:interfaces",
   ":qtwebengine_sources",
   ":qtwebengine_resources"
@@ -45,6 +46,10 @@ if (enable_webrtc) {
 
 if (is_linux && !is_desktop_linux) {
   deps += [ "//ui/events/ozone:events_ozone_evdev"]
+}
+
+if (use_xscrnsaver) {
+  deps += [ "//ui/base/x" ]
 }
 
 if (use_ozone) {
