Add extension system and PDF viewer to Qt WebEngine
Adds the Chromium extensiuon system to Qt WebEngine.
Currently, it only exposes internal APIs to the internal
PDF viewer extension.

To load a PDF, simply navigate to it.

This feature can be configured via the webengine-extensions flag
and is turned on by default.

Needs patch in Chromium 71-based to build.

Adaptations to 71-based from 69-based include:
  * Flag out update installation, add crx file dependency
  * Move PostTask over to 71-based implementation
  * Move extensions API providers to 71-based implementaion
  * Don't use custom guest view and mime handler view delegates
  * Adapt the URLRequestResourceBundleJob to match new interface
  * Move extension system initialization to end of profile constructor

Change-Id: I4fa5149057291bb5847f048534c11820cd7ff58c
Fixes: QTBUG-50556
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -20,6 +20,7 @@
             "webengine-pulseaudio": "boolean",
             "webengine-spellchecker": "boolean",
             "webengine-native-spellchecker": "boolean",
+            "webengine-extensions": "boolean",
             "webengine-webrtc": "boolean",
             "webengine-geolocation": "boolean",
             "webengine-v8-snapshot": "boolean",
@@ -36,6 +37,7 @@
             "printing-and-pdf": { "type": "boolean", "name": "webengine-printing-and-pdf" },
             "proprietary-codecs": { "type": "boolean", "name": "webengine-proprietary-codecs" },
             "spellchecker": { "type": "boolean", "name": "webengine-spellchecker" },
+            "extensions": { "type": "boolean", "name": "webengine-extensions" },
             "webrtc": { "type": "boolean", "name": "webengine-webrtc" }
         }
     },
@@ -328,6 +330,10 @@
         "webengine-arm-thumb" : {
             "label": "thumb instruction set",
             "type": "hasThumbFlag"
+        },
+        "webengine-extensions-gcc-version" : {
+            "label": "GCC 6 or newer",
+            "type": "hasGcc6OrNewer"
         }
     },
 
@@ -548,6 +554,14 @@
             "condition": "config.macos && features.webengine-spellchecker",
             "output": [ "publicFeature" ]
         },
+        "webengine-extensions": {
+            "label": "Extensions",
+            "purpose": "Enables Chromium extensions within certain limits. Currently used for enabling the pdf viewer.",
+            "section": "WebEngine",
+            "condition": "features.webengine-printing-and-pdf && (tests.webengine-extensions-gcc-version || config.clang || !config.gcc)",
+            "autoDetect": "features.webengine-printing-and-pdf",
+            "output": [ "publicFeature" ]
+        },
         "webengine-webrtc": {
             "label": "WebRTC",
             "purpose": "Provides WebRTC support.",
@@ -727,6 +741,7 @@
                 "webengine-webchannel",
                 "webengine-v8-snapshot",
                 "webengine-kerberos",
+                "webengine-extensions",
                 {
                     "type": "feature",
                     "args": "webengine-v8-snapshot-support",
