Skip qtwebengine for -no-gui build (also in the configure system)
This amends 26ac59af2306

Fixes: QTBUG-75465
Change-Id: I22df5dc851f80724a44c028310269289548dacc5
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -5,6 +5,7 @@
         "gui-private",
         "printsupport"
     ],
+    "condition": "module.gui",
     "testDir": "../../config.tests",
     "commandline": {
         "options": {
