--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -29,6 +29,7 @@ deps = [
   "//components/web_cache/renderer",
   "//components/spellcheck:buildflags",
   "//components/proxy_config",
+  "//components/user_prefs",
   "//content/public/app:browser",
   "//content",
   "//media:media_buildflags",
