Add more robust glibc test
This test also works now when cross compiling.

Change-Id: If73e16084cfbaf68ba515c2706d3ec2ec8eab8c9
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -313,7 +313,8 @@
         },
         "webengine-glibc": {
             "label": "glibc > 2.26",
-            "type": "detectGlibc"
+            "type": "compile",
+            "test": "glibc"
         },
         "webengine-libxml2-compatible": {
             "label" : "compatible system libxml2",
