Don't allow QtWebEngineCore to request executable stack
The Chromium sources contain assembly code that causes the library to
default to executable stack (the linker requires that *all* .o files
have a .note.GNU-stack section in order to default to
non-executable). So add the -z noexecstack linker flag to change the
setting.

The other libraries are not affected.

Change-Id: I0bf9ebeb5aa34d19be30fffd15a3d3063dea2005
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -327,6 +327,11 @@
         "webengine-arm-thumb" : {
             "label": "thumb instruction set",
             "type": "hasThumbFlag"
+        },
+        "webengine-noexecstack" : {
+            "label": "linker supports -z noexecstack",
+            "type": "linkerSupportsFlag",
+            "flag": "-z,noexecstack"
         }
     },
 
@@ -657,6 +662,11 @@
         "webengine-arm-thumb": {
             "label": "Thumb instruction set",
             "condition": "config.linux && features.webengine-embedded-build && arch.arm && tests.webengine-arm-thumb",
+            "output": [ "privateFeature" ]
+        },
+        "webengine-noexecstack": {
+            "label": "linker supports -z noexecstack",
+            "condition": "config.unix && tests.webengine-noexecstack",
             "output": [ "privateFeature" ]
         }
     },
