Add webenginewidgets to configure system
Make webeninge-qml webengine-widgets features indpendent
of webenginecore.

Change-Id: I11c1bfaf4a15e4cb3acf2751b367f2c92a7ac833
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -1,6 +1,7 @@
 {
     "subconfigs": [
         "src/core",
-        "src/webengine"
+        "src/webengine",
+        "src/webenginewidgets"
     ]
 }
